/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package k8s.io.api.features.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "k8s.io/api/features/v1alpha1";

// Feature represents a single feature that can be turned on or off.
message Feature {
  // The name is <status.Class>/<status.Name>.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // `spec` contains the user-settable attributes of the feature.
  optional FeatureSpec spec = 2;

  // `status` declares the facts about this feature.
  optional FeatureStatus status = 3;
}

// A list of Features.
message FeatureList {
  // Standard list metadata.
  // More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items holds a list of StorageVersion
  repeated Feature items = 2;
}

message FeatureSpec {
  // `desired` is the desired state of the feature, if it differs from
  // `status.default`. This field may be set by users.
  // +optional
  optional string desired = 1;
}

message FeatureStatus {
  // `class` is the class of feature. "cluster.kubernetes.io" indicates
  // the feature is about the host cluster. Third parties may use a
  // domain name if they wish to reuse this system for their own
  // canarying.
  optional string class = 1;

  // `name` is the name of the feature.
  optional string name = 2;

  // `stability` declares the stability of this feature in the current
  // installed version.
  optional string stability = 3;

  // `default` indicates whether the system thinks the field should be
  // enabled by default.
  optional string default = 4;

  // `state` declares the current state of the feature ("On", "Off", or a
  // transitional state).
  optional string state = 5;
}

